# conan-sample-fail

./: CMakeLists.txt  hello.cpp  hello.h
conan/: conanfile.py
conan/test_package/: CMakeLists.txt  example.cpp
